workspace-sf/force-app/main/default/objects/public_contrato__x/public_contrato__x.object-meta.xml
<CustomObject>
    <description>public$contrato</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>public$contrato</externalName>
    <label>public$contrato</label>
    <pluralLabel>public$contrato</pluralLabel>
</CustomObject>