workspace-sf/force-app/main/default/objects/public_contrato__x/fields/dataadesaoseguro__c.field-meta.xml
<CustomField>
    <fullName>dataadesaoseguro__c</fullName>
    <description>dataadesaoseguro</description>
    <externalDeveloperName>dataadesaoseguro</externalDeveloperName>
    <label>dataadesaoseguro</label>
    <type>Date</type>
</CustomField>