workspace-sf/force-app/main/default/objects/public_contrato__x/fields/datacompra__c.field-meta.xml
<CustomField>
    <fullName>datacompra__c</fullName>
    <description>datacompra</description>
    <externalDeveloperName>datacompra</externalDeveloperName>
    <label>datacompra</label>
    <type>Date</type>
</CustomField>