workspace-sf/force-app/main/default/objects/public_contrato__x/fields/datafinalvigencia__c.field-meta.xml
<CustomField>
    <fullName>datafinalvigencia__c</fullName>
    <description>datafinalvigencia</description>
    <externalDeveloperName>datafinalvigencia</externalDeveloperName>
    <label>datafinalvigencia</label>
    <type>Date</type>
</CustomField>