workspace-sf/force-app/main/default/objects/public_contrato__x/fields/datainiciovigencia__c.field-meta.xml
<CustomField>
    <fullName>datainiciovigencia__c</fullName>
    <description>datainiciovigencia</description>
    <externalDeveloperName>datainiciovigencia</externalDeveloperName>
    <label>datainiciovigencia</label>
    <type>Date</type>
</CustomField>