workspace-sf/force-app/main/default/objects/public_contrato__x/fields/datasolicitacaocancelamento__c.field-meta.xml
<CustomField>
    <fullName>datasolicitacaocancelamento__c</fullName>
    <description>datasolicitacaocancelamento</description>
    <externalDeveloperName>datasolicitacaocancelamento</externalDeveloperName>
    <label>datasolicitacaocancelamento</label>
    <type>Date</type>
</CustomField>