workspace-sf/force-app/main/default/objects/public_contrato__x/fields/estipulante__c.field-meta.xml
<CustomField>
    <fullName>estipulante__c</fullName>
    <description>estipulante</description>
    <externalDeveloperName>estipulante</externalDeveloperName>
    <label>estipulante</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>