workspace-sf/force-app/main/default/objects/public_contrato__x/fields/filial__c.field-meta.xml
<CustomField>
    <fullName>filial__c</fullName>
    <description>filial</description>
    <externalDeveloperName>filial</externalDeveloperName>
    <label>filial</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>