workspace-sf/force-app/main/default/objects/public_contrato__x/fields/idarquivo__c.field-meta.xml
<CustomField>
    <fullName>idarquivo__c</fullName>
    <description>idarquivo</description>
    <externalDeveloperName>idarquivo</externalDeveloperName>
    <label>idarquivo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>