workspace-sf/force-app/main/default/objects/public_contrato__x/fields/idlotecapitalizacao__c.field-meta.xml
<CustomField>
    <fullName>idlotecapitalizacao__c</fullName>
    <description>idlotecapitalizacao</description>
    <externalDeveloperName>idlotecapitalizacao</externalDeveloperName>
    <label>idlotecapitalizacao</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>