workspace-sf/force-app/main/default/objects/public_contrato__x/fields/idseguradoparceiro__c.field-meta.xml
<CustomField>
    <fullName>idseguradoparceiro__c</fullName>
    <description>idseguradoparceiro</description>
    <externalDeveloperName>idseguradoparceiro</externalDeveloperName>
    <label>idseguradoparceiro</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>