workspace-sf/force-app/main/default/objects/public_contrato__x/fields/importanciasegurada__c.field-meta.xml
<CustomField>
    <fullName>importanciasegurada__c</fullName>
    <description>importanciasegurada</description>
    <externalDeveloperName>importanciasegurada</externalDeveloperName>
    <label>importanciasegurada</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>