workspace-sf/force-app/main/default/objects/public_contrato__x/fields/motivocancelamento__c.field-meta.xml
<CustomField>
    <fullName>motivocancelamento__c</fullName>
    <description>motivocancelamento</description>
    <externalDeveloperName>motivocancelamento</externalDeveloperName>
    <label>motivocancelamento</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>