workspace-sf/force-app/main/default/objects/public_contrato__x/fields/planocontratado__c.field-meta.xml
<CustomField>
    <fullName>planocontratado__c</fullName>
    <description>planocontratado</description>
    <externalDeveloperName>planocontratado</externalDeveloperName>
    <label>planocontratado</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>