workspace-sf/force-app/main/default/objects/public_contrato__x/fields/quantidadetotalparcelas__c.field-meta.xml
<CustomField>
    <fullName>quantidadetotalparcelas__c</fullName>
    <description>quantidadetotalparcelas</description>
    <externalDeveloperName>quantidadetotalparcelas</externalDeveloperName>
    <label>quantidadetotalparcelas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>