workspace-sf/force-app/main/default/objects/public_contrato__x/fields/tiporesponsavelfinanceiro__c.field-meta.xml
<CustomField>
    <fullName>tiporesponsavelfinanceiro__c</fullName>
    <description>tiporesponsavelfinanceiro</description>
    <externalDeveloperName>tiporesponsavelfinanceiro</externalDeveloperName>
    <label>tiporesponsavelfinanceiro</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>